--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
   <style>
     body {
       font-family: 'Cairo', sans-serif;
-      background-color: #fdf4f8;
-      color: #333;
+      background-color: #fffbea;
+      color: #1a237e;
       margin: 0;
       padding: 0;
     }
     header {
-      background-color: #f58fc1;
-      color: white;
+      background-color: #ffeb3b;
+      color: #1a237e;
       text-align: center;
       padding: 1.5em;
     }
     section {
       max-width: 600px;
       margin: 2em auto;
-      background: white;
+      background: #ffffff;
       padding: 2em;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
     h2 {
-      color: #d94c9d;
+      color: #fbc02d;
     }
     label, select, input {
       display: block;
@@ -45,19 +45,19 @@
       padding: 1em;
       margin: 1em 0;
       text-align: center;
-      background-color: #d94c9d;
+      background-color: #1e88e5;
       color: white;
       font-weight: bold;
       border-radius: 8px;
       text-decoration: none;
     }
     .button:hover {
-      background-color: #c13f8e;
+      background-color: #1565c0;
     }
     footer {
       text-align: center;
       margin: 2em 0;
-      color: #aaa;
+      color: #777;
     }
   </style>
   <script>
