--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
       border-radius: 8px;
       border: 1px solid #ccc;
     }
+    .note {
+      background-color: #fff9c4;
+      border: 1px solid #fbc02d;
+      padding: 1em;
+      border-radius: 8px;
+      margin-bottom: 1.5em;
+      color: #5d4037;
+      font-size: 0.95em;
+    }
     .button {
       display: block;
       width: 100%;
@@ -82,6 +91,10 @@
     <p>9 - 13 مايو 2025 | الصالة الثقافية</p>
   </header>
   <section>
+    <div class="note">
+      💡 سعر التذكرة الواحدة: <strong>ديناران فقط</strong>، ولا يُشترط اختيار مقعد محدد داخل الصالة.
+    </div>
+
     <h2>املأ بياناتك واختر العرض</h2>
 
     <label for="fullName">الاسم الكامل:</label>
